--- a/manifests/prd/cert-manager/kustomization.yaml
+++ b/manifests/prd/cert-manager/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-- ./bases/cert-manager.yaml
-# - ./bases/letsencrypt-staging.yaml
-# - ./bases/letsencrypt.yaml
+- ./cert-manager.yaml
