--- a/manifests/prd/external-dns/kustomization.yaml
+++ b/manifests/prd/external-dns/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: external-dns
+
 bases:
 - github.com/kubernetes-sigs/external-dns//kustomize?ref=v0.7.4
 
