sets traefik as the default ingress controller

--- a/manifests/prd/traefik.yaml
+++ b/manifests/prd/traefik.yaml
@@ -29,3 +29,6 @@ spec:
         kind: HelmRepository
         name: traefik
         namespace: gotk-system
+  values:
+    ingressClass:
+      isDefaultClass: true
