fix: enabled publishedService on traefik

--- a/manifests/prd/traefik.yaml
+++ b/manifests/prd/traefik.yaml
@@ -33,3 +33,7 @@ spec:
     ingressClass:
       enabled: true
       isDefaultClass: true
+      providers:
+        kubernetesIngress:
+          publishedService:
+            enabled: true
